Fix price alignment

--- a/saleor/static/dashboard/scss/components/_data-table.scss
+++ b/saleor/static/dashboard/scss/components/_data-table.scss
@@ -111,6 +111,7 @@
 
     &:last-child {
       padding-right: 24px;
+      text-align: right;
     }
 
     &.no-padded {
